fix height overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body, #app, #root {
-  height: 100%;
+html, body,div #app, #root {
+  height: 100vh;
   background-color:#1B1717;
   box-sizing: border-box;
-
+  margin: 0px;
+  padding:0px;
 }
 body {
   margin: 0;
